# leebots_local_planner

./: .gitignore  CMakeLists.txt  README.md  lbp_plugin.xml  package.xml
include/leebots_local_planner/: leebots_local_planner_ros.h
launch/: move_base_DWA.launch  move_base_TEB.launch  move_base_global.launch  move_base_leebots.launch  multi_gazebo.launch  rviz_barn.rviz
scripts/: fake_odom_publisher.py  frames.gv  leebots_env.py  test_leebots_td3.py  train_leebots_td3.py
scripts/pytorch_models/: leebots_actor.pth
scripts/results/: leebots.npy
scripts/runs/Mar18_14-26-11_glab-B550-AORUS-ELITE/: events.out.tfevents.1742275571.glab-B550-AORUS-ELITE.241248.0
scripts/runs/Mar18_14-34-18_glab-B550-AORUS-ELITE/: events.out.tfevents.1742276058.glab-B550-AORUS-ELITE.244344.0
scripts/runs/Mar18_14-54-28_glab-B550-AORUS-ELITE/: events.out.tfevents.1742277268.glab-B550-AORUS-ELITE.245588.0
scripts/runs/Mar18_14-55-28_glab-B550-AORUS-ELITE/: events.out.tfevents.1742277328.glab-B550-AORUS-ELITE.245676.0
scripts/runs/Mar18_14-59-59_glab-B550-AORUS-ELITE/: events.out.tfevents.1742277599.glab-B550-AORUS-ELITE.246565.0
scripts/runs/Mar18_15-05-10_glab-B550-AORUS-ELITE/: events.out.tfevents.1742277910.glab-B550-AORUS-ELITE.247583.0
scripts/runs/Mar18_15-14-07_glab-B550-AORUS-ELITE/: events.out.tfevents.1742278447.glab-B550-AORUS-ELITE.248429.0
scripts/runs/Mar18_16-33-23_glab-B550-AORUS-ELITE/: events.out.tfevents.1742283203.glab-B550-AORUS-ELITE.257454.0
src/: leebots_local_planner_ros.cpp
(+30 files in other folders)
